--- a/styles/index.css
+++ b/styles/index.css
@@ -51,7 +51,7 @@
 }
 
 .navigasi .dashboard {
-    background-color: #2ae399;
+    background-color: #20fba3;
     color: var(--primary-blue);
     padding: 8px 13px;
     border: none;
