--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -107,9 +107,9 @@ td {
     padding: 5px 7px;
 }
 
-tr:hover td {
+/* tr:hover td {
     background-color:  rgb(63, 170, 224);
-}
+} */
 
 tbody tr td:nth-child(5) {
     display: flex;
